--- a/.cproject
+++ b/.cproject
@@ -50,7 +50,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AUDIO_POINT/Speex_Lib/STM32/libspeex}&quot;" />
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AUDIO_POINT/Speex_Lib/STM32/libspeex/gcc}&quot;" />
 									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/include" />
-								<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" /></option>
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F" />
+								</option>
 								<option id="com.atollic.truestudio.gcc.symbols.defined.1670122205" name="Defined symbols" superClass="com.atollic.truestudio.gcc.symbols.defined" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__weak=__attribute__((weak))" />
 									<listOptionValue builtIn="false" value="__packed=__attribute__((__packed__))" />
@@ -118,10 +120,7 @@
 							<inputType id="com.atollic.truestudio.gcc.input.1274347818" superClass="com.atollic.truestudio.gcc.input" />
 						</tool>
 					</fileInfo>
-					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares" />
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers" />
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc" />
+					<sourceEntries><entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares" /><entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers" /><entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc" />
 						<entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Speex_Lib" />
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src" />
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="startup" />
@@ -182,7 +181,9 @@
 									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/include" />
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AUDIO_POINT/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F}&quot;" />
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AUDIO_POINT/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS}&quot;" />
-								<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" /></option>
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F" />
+								</option>
 								<option id="com.atollic.truestudio.gcc.symbols.defined.1670122205" name="Defined symbols" superClass="com.atollic.truestudio.gcc.symbols.defined" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__weak=__attribute__((weak))" />
 									<listOptionValue builtIn="false" value="__packed=__attribute__((__packed__))" />
@@ -252,10 +253,7 @@
 							<inputType id="com.atollic.truestudio.gcc.input.1274347818" superClass="com.atollic.truestudio.gcc.input" />
 						</tool>
 					</fileInfo>
-					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares" />
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers" />
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc" />
+					<sourceEntries><entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares" /><entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers" /><entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc" />
 						<entry excluding="libspeex/vbr.c|libspeex/testenc.c|libspeex/testenc_wb.c|libspeex/testenc_uwb.c|libspeex/testecho.c|libspeex/testdenoise.c|libspeex/stereo.c|libspeex/smallft.c|libspeex/sb_celp.c|libspeex/resample.c|libspeex/preprocess.c|libspeex/modes_wb.c|libspeex/mdf.c|libspeex/kiss_fftr.c|libspeex/kiss_fft.c|libspeex/jitter.c|libspeex/hexc_table.c|libspeex/hexc_10_32_table.c|libspeex/filterbank.c|libspeex/fftwrap.c|libspeex/exc_8_128_table.c|libspeex/exc_5_64_table.c|libspeex/exc_5_256_table.c|libspeex/exc_20_32_table.c|libspeex/exc_10_16_table.c|STM32/libspeex/arm|STM32/libspeex/iar" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Speex_Lib" />
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src" />
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="startup" />
